/*
 *  UCF COP3330 Summer 2021 Assignment 5 Solution
 *  Copyright 2021 Rey Fundora
 */

package ucf.assignments;

public class View {

    // For these three, there will be three dynamic lists that will hold values depending on
    // the "Item_right_click" class and selecting a view option will change where the
    // tableSetGet gets its data

    static void runViewAll() {
        // Click View > All
        // Display List with all values
    }

    static void runViewYes() {
        // Click View > Completed
        // Display List with only 'Marked Complete'

    }

    static void runViewNo() {
        // CLick View > Incompleted
        // Display List with only 'Marked Incomplete'

    }
}
