@startuml
'https://plantuml.com/sequence-diagram

class appController {

FileCloseClicked()
FileOpenClicked()
FileSaveClicked()
ViewAllClicked()
ViewCompleteClicked()
ViewIncompleteClicked()
RCMarkIncompleteClicked()
RCMarkCompleteClicked()
GettingStartedClicked()
AboutClicked()

--
EditNewClicked
EditDeleteClicked
Initialize
addTodoItem
EditClearAllClicked
deleteRCClicked

}

class Edit {
AddButtonClicked()
DeleteOkClicked()
}

class File {
runOpen()
AddButtonClicked
runSave()
AddButtonClicked2()
}

class View {
runViewAll()
runViewYes()
runViewNo()
}

class Help {
AddButtonClicked2()
runAbout()
}

class startScene {
main()
start()
}



appController -|> startScene
appController <|- startScene

Edit -- startScene
File -- startScene
Help -- startScene
View -- startScene



@enduml